tests/ui/rfcs/rfc-2091-track-caller/error-odd-syntax.stderr
error[E0565]: malformed `track_caller` attribute input
  --> $DIR/error-odd-syntax.rs:1:1
   |
LL | #[track_caller(1)]
   | ^^^^^^^^^^^^^^---^
   | |             |
   | |             didn't expect any arguments here
   | help: must be of the form: `#[track_caller]`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0565`.
